--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@ body {
   font-size: 20px;
 }
 
+input[type="text"]:focus {
+  outline: none;
+  border: 2px solid var(--bright-green);
+}
+
+button:focus {
+  outline: none;
+}
+
 .hidden {
   display: none;
 }
@@ -57,8 +66,14 @@ body {
   background-color: var(--dark-blue);
 }
 
+.addTaskButton:focus {
+  outline: none;
+}
+
 .errorMessage {
   color: #fff;
+  margin-top: 0.5rem;
+  transition: all 0.5s ease;
 }
 
 .tasksContainer {
@@ -77,18 +92,31 @@ body {
   align-items: center;
   background-color: var(--medium-blue);
   border-radius: 10px;
-  padding: 0.5rem;
+  padding: 0.7rem;
   margin-top: 1rem;
   box-shadow: 0px 4px 4px rgba(3, 201, 136, 0.25);
+  padding-left: 1rem;
 }
 
-.taskCheckIcon {
-  position: absolute;
-  left: 1rem;
+.taskCheckButton {
   color: var(--dark-blue);
   font-size: 24px;
-  margin-right: 1rem;
+  margin: 2rem, 1rem, 0px 0px;
+  border: none;
+  background-color: transparent;
+  color: var(--dark-blue);
   cursor: pointer;
+  transition: color 0.3s ease;
+  outline: none;
+  border: none;
+}
+
+.taskCheckButton:hover {
+  color: #fff;
+}
+
+.taskCheckButton:focus {
+  outline: none;
 }
 
 .taskContent {
@@ -96,7 +124,6 @@ body {
   max-width: calc(600px - 130px);
   padding: 0px 20px 0px 0px;
   margin-right: auto;
-  margin-left: 4rem;
   flex: 1;
   margin-right: 1rem;
   font-size: 18px;
@@ -113,8 +140,14 @@ body {
   font-size: 20px;
   cursor: pointer;
   transition: color 0.3s ease;
+  outline: none;
+  border: none;
 }
 
 .deleteTaskButton:hover {
   color: #fff;
+}
+
+.deleteTaskButton:focus {
+  outline: none;
 }
