--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,22 @@ button:focus {
   outline: none;
 }
 
+.sortTasks {
+  height: 100%;
+  border-radius: 10px 10px 10px 10px;
+  border: 2px solid var(--medium-blue);
+  margin-left: 2rem;
+  cursor: pointer;
+  padding-left: 0.5rem;
+}
+
+.sortTasks:focus {
+  outline: none;
+}
+
 .errorMessage {
   color: #fff;
-  margin-top: 0.5rem;
+  margin: 0.5rem 0rem 3rem 0rem;
   transition: all 0.5s ease;
 }
 
@@ -90,12 +103,44 @@ button:focus {
   justify-content: space-between;
   position: relative;
   align-items: center;
-  background-color: var(--medium-blue);
   border-radius: 10px;
   padding: 0.7rem;
   margin-top: 1rem;
-  box-shadow: 0px 4px 4px rgba(3, 201, 136, 0.25);
   padding-left: 1rem;
+}
+
+.deletedTaskLine {
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #fff;
+  left: 0;
+  visibility: hidden;
+}
+
+.toDO {
+  background-color: var(--medium-blue);
+}
+
+.completed {
+  background-color: var(--bright-green);
+}
+
+.completed .taskCheckButton {
+  display: none;
+}
+
+.deleted {
+  background-color: var(--dark-blue);
+}
+
+.deleted button {
+  color: var(--medium-blue);
+  pointer-events: none;
+}
+
+.deleted div:first-child {
+  visibility: visible !important;
 }
 
 .taskCheckButton {
@@ -129,6 +174,7 @@ button:focus {
   font-size: 18px;
   color: #fff;
   word-wrap: break-word;
+  font-weight: 600;
 }
 
 .deleteTaskButton {
