--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ button:focus {
 }
 
 .main {
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  min-height: 100vh;
   background-color: var(--dark-purple);
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@ button:focus {
   width: 70vw;
   max-width: 600px;
   display: flex;
+  margin-bottom: 1.5rem;
 }
 
 .tasksInput {
@@ -71,7 +72,7 @@ button:focus {
 }
 
 .sortTasks {
-  height: 100%;
+  min-height: 100%;
   border-radius: 10px 10px 10px 10px;
   border: 2px solid var(--medium-blue);
   margin-left: 2rem;
@@ -85,14 +86,16 @@ button:focus {
 
 .errorMessage {
   color: #fff;
-  margin: 0.5rem 0rem 3rem 0rem;
+  margin: 0rem 0rem 0.5rem 0rem;
   transition: all 0.5s ease;
+  font-size: 1.1rem;
 }
 
 .tasksContainer {
   width: 70vw;
   max-width: 600px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  padding-bottom: 3rem;
 }
 
 .taskElement {
