--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ button:focus {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .main {
@@ -32,12 +32,12 @@ button:focus {
   width: 150px;
   transform: rotate(20deg);
   margin-bottom: 3rem;
-  margin-top: -5rem;
+  margin-top: 5rem;
 }
 
 .tasksInputContainer {
   width: 70vw;
-  max-width: 600px;
+  max-width: 800px;
   display: flex;
   margin-bottom: 1.5rem;
 }
@@ -71,6 +71,29 @@ button:focus {
   outline: none;
 }
 
+.clearAllTasksButton {
+  border-radius: 10px 10px 10px 10px;
+  background-color: var(--medium-blue);
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  height: 40px;
+  padding: 0 20px;
+  width: 180px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.clearAllTasksButton:hover {
+  background-color: var(--dark-blue);
+}
+
+.clearAllTasksButton:focus {
+  outline: none;
+}
+
 .sortTasks {
   min-height: 100%;
   border-radius: 10px 10px 10px 10px;
@@ -93,14 +116,13 @@ button:focus {
 
 .tasksContainer {
   width: 70vw;
-  max-width: 600px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  max-width: 800px;
   padding-bottom: 3rem;
 }
 
 .taskElement {
   width: 70vw;
-  max-width: 600px;
+  max-width: 800px;
   min-height: 40px;
   display: flex;
   justify-content: space-between;
@@ -110,6 +132,7 @@ button:focus {
   padding: 0.7rem;
   margin-top: 1rem;
   padding-left: 1rem;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .deletedTaskLine {
@@ -135,6 +158,7 @@ button:focus {
 
 .deleted {
   background-color: var(--dark-blue);
+  user-select: none;
 }
 
 .deleted button {
@@ -169,7 +193,7 @@ button:focus {
 
 .taskContent {
   width: calc(70vw - 130px);
-  max-width: calc(600px - 130px);
+  max-width: calc(800px - 130px);
   padding: 0px 20px 0px 0px;
   margin-right: auto;
   flex: 1;
