--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,22 @@ button:focus {
 }
 
 .main {
-  max-width: 100vw;
-  min-height: 100vh;
-  background-color: var(--dark-purple);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: auto;
+  z-index: 10;
+  background: linear-gradient(
+    -45deg,
+    var(--gradient-color-1),
+    var(--gradient-color-2),
+    var(--gradient-color-3),
+    var(--gradient-color-4)
+  );
+  background-size: 350% 350%;
+  animation: gradient 15s ease infinite;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -223,4 +236,57 @@ button:focus {
 
 .deleteTaskButton:focus {
   outline: none;
+}
+
+@media (max-width: 981px) {
+  .clearAllTasksButton {
+    font-size: 16px;
+    animation: 0.2s;
+  }
+}
+
+@media (max-width: 878px) {
+  .clearAllTasksButton {
+    font-size: 14px;
+    animation: 0.2s;
+  }
+}
+
+@media (max-width: 562px) {
+  .tasksInputContainer {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .tasksInput {
+    border-radius: 10px 10px 10px 10px;
+  }
+
+  .addTaskButton {
+    border-radius: 10px 10px 10px 10px;
+  }
+
+  .sortTasks {
+    margin-left: 0;
+    min-height: 30px;
+  }
+
+  .clearAllTasksButton {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
